[squash] also count by section and add to description

--- a/priv/stat_descriptions.cfg
+++ b/priv/stat_descriptions.cfg
@@ -6,3 +6,91 @@
     {type, counter},
     {desc, <<"number of times a configuration value has been deleted">>}
 ]}.
+{[config, cloudant, set], [
+    {type, counter},
+    {desc, <<"number of times a configuration value has been set in section cloudant">>}
+]}.
+{[config, cloudant, delete], [
+    {type, counter},
+    {desc, <<"number of times a configuration value has been deleted in section cloudant">>}
+]}.
+{[config, cluster, set], [
+    {type, counter},
+    {desc, <<"number of times a configuration value has been set in section cluster">>}
+]}.
+{[config, cluster, delete], [
+    {type, counter},
+    {desc, <<"number of times a configuration value has been deleted in section cluster">>}
+]}.
+{[config, couchdb, set], [
+    {type, counter},
+    {desc, <<"number of times a configuration value has been set in section couchdb">>}
+]}.
+{[config, couchdb, delete], [
+    {type, counter},
+    {desc, <<"number of times a configuration value has been deleted in section couchdb">>}
+]}.
+{[config, fabric, set], [
+    {type, counter},
+    {desc, <<"number of times a configuration value has been set in section fabric">>}
+]}.
+{[config, fabric, delete], [
+    {type, counter},
+    {desc, <<"number of times a configuration value has been deleted in section fabric">>}
+]}.
+{[config, global_changes, set], [
+    {type, counter},
+    {desc, <<"number of times a configuration value has been set in section global_changes">>}
+]}.
+{[config, global_changes, delete], [
+    {type, counter},
+    {desc, <<"number of times a configuration value has been deleted in section global_changes">>}
+]}.
+{[config, ioq, set], [
+    {type, counter},
+    {desc, <<"number of times a configuration value has been set in section ioq">>}
+]}.
+{[config, ioq, delete], [
+    {type, counter},
+    {desc, <<"number of times a configuration value has been deleted in section ioq">>}
+]}.
+{[config, log, set], [
+    {type, counter},
+    {desc, <<"number of times a configuration value has been set in section log">>}
+]}.
+{[config, log, delete], [
+    {type, counter},
+    {desc, <<"number of times a configuration value has been deleted in section log">>}
+]}.
+{[config, mem3, set], [
+    {type, counter},
+    {desc, <<"number of times a configuration value has been set in section mem3">>}
+]}.
+{[config, mem3, delete], [
+    {type, counter},
+    {desc, <<"number of times a configuration value has been deleted in section mem3">>}
+]}.
+{[config, rexi, set], [
+    {type, counter},
+    {desc, <<"number of times a configuration value has been set in section rexi">>}
+]}.
+{[config, rexi, delete], [
+    {type, counter},
+    {desc, <<"number of times a configuration value has been deleted in section rexi">>}
+]}.
+{[config, smoosh, set], [
+    {type, counter},
+    {desc, <<"number of times a configuration value has been set in section smoosh">>}
+]}.
+{[config, smoosh, delete], [
+    {type, counter},
+    {desc, <<"number of times a configuration value has been deleted in section smoosh">>}
+]}.
+{[config, view_updater, set], [
+    {type, counter},
+    {desc, <<"number of times a configuration value has been set in section view_updater">>}
+]}.
+{[config, view_updater, delete], [
+    {type, counter},
+    {desc, <<"number of times a configuration value has been deleted in section view_updater">>}
+]}.
